--- a/rick-morty/src/App.css
+++ b/rick-morty/src/App.css
@@ -302,3 +302,11 @@ h1 {
   color: #00ffc3;
   margin-bottom: 2rem;
 }
+
+.notFoundImg {
+  padding-top: 20px;
+  max-width: 100%;
+  height: auto;
+  border-radius: 12px;
+  margin-top: 20px;
+}
